removed part of code that gives different output type if node_representation == state

--- a/layer_matching.ipynb
+++ b/layer_matching.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1164,
    "metadata": {
     "collapsed": false
    },
@@ -123,6 +123,7 @@
     "    df_slice : iterator\n",
     "        Iterator object that yields one bin at a time.\n",
     "    \"\"\"\n",
+    "    print \"function called: time_bin_network\"\n",
     "    \n",
     "    try:\n",
     "        assert window >= 300\n",
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1165,
    "metadata": {
     "collapsed": false
    },
@@ -168,6 +169,7 @@
     "    filename : str\n",
     "        Name of resulting file\n",
     "    \"\"\"\n",
+    "    print \"function called: dump_binned_network\"\n",
     "    \n",
     "    binned_network = list(time_bin_network(df, window=binsize))\n",
     "    \n",
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1166,
    "metadata": {
     "collapsed": false
    },
@@ -195,6 +197,7 @@
     "        Name relating to the span of each bin in the\n",
     "        partitioned network.\n",
     "    \"\"\"\n",
+    "    print \"function called: load_binned_network\"\n",
     "    \n",
     "    with open('../Data/processed_data/binned_networks/'+kind+'/'+filename+'.pickle', 'r') as infile:\n",
     "        return pickle.load(infile)"
@@ -202,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1167,
    "metadata": {
     "collapsed": true
    },
@@ -211,6 +214,7 @@
     "def create_loadable_bins():\n",
     "    \"\"\"Store a series of binned networks locally\n",
     "    \"\"\"\n",
+    "    print \"function called: create_loadable_bins\"\n",
     "    \n",
     "    bins = [300, 900, 1800, 3600, 86400, 604800]\n",
     "    bin_names = ['5mins', '15mins', '30mins', 'hourly', 'daily', 'weekly']\n",
@@ -232,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1168,
    "metadata": {
     "collapsed": false
    },
@@ -259,6 +263,7 @@
     "        A string in .net format, representing the input\n",
     "        network\n",
     "    \"\"\"\n",
+    "    print \"function called: network_reformat\"\n",
     "    \n",
     "    # Asserting that inputs are correct types\n",
     "    output_format_allowed = ['graph','net']\n",
@@ -343,13 +348,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 1169,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def network_reformat_multiplex(halflife=-1,disambiguation=False,*args):\n",
+    "def network_reformat_multiplex(halflife=-1,node_representation=\"physical\",*args):\n",
     "    \"\"\"Return multiplex representation of multiplex network\n",
     "    \n",
     "    Parameters\n",
@@ -357,9 +362,9 @@
     "    halflife : number\n",
     "        Halflife in seconds of relax-rate decay between layers.\n",
     "        Defaults to -1.\n",
-    "    disambuation : bool\n",
-    "        Set to True if state nodes associated with the same physical\n",
-    "        node should have different reference names. Defaults to False.\n",
+    "    node_representation : string\n",
+    "        Set to \"state if state nodes associated with the same physical\n",
+    "        node should have different reference names. Defaults to \"physical\".\n",
     "    *args : pandas df formatted layer(s)\n",
     "        \n",
     "    Returns\n",
@@ -369,6 +374,7 @@
     "    int_to_hash : dict\n",
     "        Key-value pairs of node integer id and original hash id\n",
     "    \"\"\"\n",
+    "    print \"function called: network_reformat_multiplex\"\n",
     "    \n",
     "    # Infomap will only work with node indices on the command line.\n",
     "    \n",
@@ -379,12 +385,12 @@
     "        layer_nodes.update(df[\"user1\"])\n",
     "        layer_nodes.update(df[\"user2\"])\n",
     "        \n",
-    "        if disambiguation:\n",
+    "        if node_representation == \"state\":\n",
     "            # Add layer identifier to end of each node hash\n",
     "            layer_nodes = [hash_str+\"_\"+str(l+1) for hash_str in layer_nodes]    \n",
     "        nodes_hash.extend(layer_nodes) # no good reason to sort them\n",
     "        \n",
-    "    if not disambiguation:\n",
+    "    if node_representation == \"physical\":\n",
     "        nodes_hash = sorted(set(nodes_hash)) # no good reason not to sort them\n",
     "    \n",
     "    nodes = range(1,len(nodes_hash)+1)\n",
@@ -401,12 +407,13 @@
     "    out_file += \"\\n*Multiplex\"\n",
     "    \n",
     "    for l, df in enumerate(args):\n",
-    "        if disambiguation:\n",
+    "        if node_representation == \"state\":\n",
     "            user1 = [hash_str+\"_\"+str(l+1) for hash_str in df[\"user1\"]]\n",
     "            user2 = [hash_str+\"_\"+str(l+1) for hash_str in df[\"user2\"]]\n",
     "        else:\n",
     "            user1 = df[\"user1\"]\n",
     "            user2 = df[\"user2\"]\n",
+    "            \n",
     "        edges_hash = zip(user1, user2)\n",
     "        \n",
     "        # Add weights\n",
@@ -430,7 +437,7 @@
     "        tau = halflife/np.log(2)\n",
     "        return np.exp(-t/float(tau))\n",
     "    \n",
-    "    if disambiguation:\n",
+    "    if node_representation == \"state\":\n",
     "        nodes_hash_set = set([hash_str_id.split(\"_\")[0] for hash_str_id in nodes_hash])\n",
     "        error_count = 0\n",
     "        for n in nodes_hash_set:\n",
@@ -470,13 +477,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1170,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def community_detection_single_layer(nodes,edges,kind=\"list\"):\n",
+    "    print \"function called: community_detection_single_layer\"\n",
     "    \n",
     "    hash_to_int = dict(zip(nodes,range(len(nodes))))\n",
     "    int_to_hash = dict(zip(range(len(nodes)),nodes))\n",
@@ -521,14 +529,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1158,
+   "execution_count": 1180,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def community_detection_multiplex(halflife=-1, disambiguation=False, *args):\n",
+    "def community_detection_multiplex(halflife=-1, node_representation=\"physical\", *args):\n",
     "    \"\"\"Run multiplex community detection because Python implementation has no docs\n",
     "    \n",
     "    Parameters\n",
@@ -536,14 +544,16 @@
     "    halflife : number\n",
     "        Halflife in seconds of relax-rate decay between layers.\n",
     "        Defaults to -1.\n",
+    "    node_representation : string\n",
+    "        Set to \"state if state nodes associated with the same physical\n",
+    "        node should have different reference names. Defaults to \"physical\".\n",
     "    *args : layers (pandas dfs)\n",
     "    \n",
     "    Returns\n",
     "    -------\n",
-    "    communities : list of lists / JSON\n",
-    "        IMPORTANT: disambiguation is False return is list of lists\n",
-    "        else JSON.\n",
+    "    communities : list of lists\n",
     "    \"\"\"\n",
+    "    print \"function called: community_detection_multiplex\"\n",
     "    \n",
     "    def parse_communities():\n",
     "        with open('output/'+multiplex_network_filename+\".clu\", 'r') as infile:\n",
@@ -581,7 +591,7 @@
     "        return module_flow, exit_flow\n",
     "    \n",
     "    # Get network in mutliplex string format and define filename\n",
-    "    multiplex_network, int_to_hash = network_reformat_multiplex(halflife, disambiguation, *args)\n",
+    "    multiplex_network, int_to_hash = network_reformat_multiplex(halflife, node_representation, *args)\n",
     "    multiplex_network_filename = 'multiplex-network'\n",
     "\n",
     "    # Store locally\n",
@@ -592,21 +602,6 @@
     "    subprocess.call(['./Infomap/Infomap', 'input/'+multiplex_network_filename+\".net\", 'output/', '-i', 'multiplex', '--two-level', '--map', '--clu', '--tree', '--btree', '--bftree'])\n",
     "    \n",
     "    communities_list = parse_communities()\n",
-    "    \n",
-    "    if not disambiguation:\n",
-    "        # Reformat to pretty JSON\n",
-    "        communities_dict = {}\n",
-    "        for c_ in communities_list:\n",
-    "            layer = int(c_[0].split(\"_\")[1])\n",
-    "            c = [n.split(\"_\")[0] for n in c_]\n",
-    "            try:\n",
-    "                communities_dict[layer]['modules'].append(c)\n",
-    "            except KeyError:\n",
-    "                \n",
-    "                communities_dict.update({layer:{'modules':[c],\n",
-    "                                                'timestamp': dt.datetime.fromtimestamp(args[layer-1]['timestamp'].values[0]),\n",
-    "                                                'timedelta': args[layer-1]['timestamp'].values[-1]-args[layer-1]['timestamp'].values[0]+300}})\n",
-    "        return communities_dict, parse_node_flow_from_tree(), parse_module_flow_from_map()\n",
     "    \n",
     "    return communities_list, parse_node_flow_from_tree(), parse_module_flow_from_map()"
    ]
@@ -628,7 +623,7 @@
     }
    ],
    "source": [
-    "communities_list1 = community_detection_multiplex(3600, True, *[layer1,layer2])[0]"
+    "communities_list1 = community_detection_multiplex(3600, \"state\", *[layer1,layer2])[0]"
    ]
   },
   {
@@ -18792,7 +18787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1172,
    "metadata": {
     "collapsed": false
    },
@@ -18816,6 +18811,7 @@
     "        Community members in respective communities which are\n",
     "        persistent across the two layers.\n",
     "    \"\"\"\n",
+    "    print \"function called: community_matching\"\n",
     "    \n",
     "    if len(c_b) == 0:\n",
     "        return [[]]\n",
@@ -18840,7 +18836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1173,
    "metadata": {
     "collapsed": false
    },
@@ -18873,6 +18869,7 @@
     "        persistent in their group across time slices i and j.\n",
     "        \n",
     "    \"\"\"\n",
+    "    print \"function called: get_matchings_recursively\"\n",
     "    \n",
     "    if layers != None:\n",
     "        layers = layers\n",
@@ -18896,7 +18893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1174,
    "metadata": {
     "collapsed": false
    },
@@ -18936,6 +18933,7 @@
     "        'reference_layer' and j.\n",
     "        \n",
     "    \"\"\"\n",
+    "    print \"function called: get_matchings\"\n",
     "    \n",
     "    if layers != None:\n",
     "        \n",
@@ -18980,13 +18978,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1085,
+   "execution_count": 1175,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def get_layer_similarity(coms1, coms2):\n",
+    "    print \"function called: get_layer_similarity\"\n",
+    "    \n",
     "    # I've implemented this in a wacky way, and really similarity just needs to be a proper measure.\n",
     "    nodes1 = [item for sublist in coms1 for item in sublist]\n",
     "    nodes2 = [item for sublist in coms2 for item in sublist]\n",
@@ -19025,7 +19025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1176,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -19054,6 +19054,7 @@
     "        argument passed to 'get_matchings' or 'get_all_matchings' for retrieval of 'matchings' parameter\n",
     "        used in this function.\n",
     "    \"\"\"\n",
+    "    print \"function called: community_decay\"\n",
     "    \n",
     "    if type(matchings[0][0][0]) == list:\n",
     "        y = [sum([sum([1 for i in tmp]) for tmp in tmpp]) for tmpp in matchings[reference_time]]\n",
@@ -19073,13 +19074,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 996,
+   "execution_count": 1177,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def drawNetwork(G,k_):\n",
+    "    print \"function called: drawNetwork\"\n",
     "    # position map\n",
     "    pos = nx.graphviz_layout(G,prog='neato', k=k_)\n",
     "    # community ids\n",
@@ -19126,13 +19128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1178,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def draw_network_communities(G,k_):\n",
+    "    print \"function called: draw_network_communities\"\n",
     "    \n",
     "    communities = [v for k,v in nx.get_node_attributes(G, 'community').items()]\n",
     "    num_communities = max(communities) + 1\n",
@@ -19582,7 +19585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 849,
+   "execution_count": 1179,
    "metadata": {
     "collapsed": false
    },
@@ -19601,6 +19604,7 @@
     "    overlap : float\n",
     "        Average node module participation\n",
     "    \"\"\"\n",
+    "    print \"function called: calculate_overlap\"\n",
     "    \n",
     "    flattened_communities = []\n",
     "    for c in communities:\n",
@@ -19624,6 +19628,7 @@
     "    modulesize : float\n",
     "        Average node module participation size divided by number of nodes\n",
     "    \"\"\"\n",
+    "    print \"function called: calculate_modulesize\"\n",
     "    \n",
     "    module_internal_flow = [i[0] for i in module_flow]\n",
     "    module_exit_flow = [i[1] for i in module_flow]\n",
@@ -19653,6 +19658,8 @@
     "    modulesize : float\n",
     "        Average node module participation size divided by number of nodes\n",
     "    \"\"\"\n",
+    "    print \"function called: calculate_modulesize_simple\"\n",
+    "    \n",
     "    return float(len(set([item for sublist in communities for item in sublist])))/len(communities)"
    ]
   },
