I removed everything in functions related to the 'state_node' argument because it turned out that Infomap's --expanded flag had the functionality i needed to infer state node communities. Now i need to make sure these changes are reflected in the code that depend on network_reformat_multiplex function. I'm happy with this solution, it's simpler.

--- a/layer_matching.ipynb
+++ b/layer_matching.ipynb
@@ -348,13 +348,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1588,
+   "execution_count": 1632,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def network_reformat_multiplex(halflife=-1,node_representation=\"physical\",*args):\n",
+    "def network_reformat_multiplex(layers, halflife=-1):\n",
     "    \"\"\"Return multiplex representation of multiplex network\n",
     "    \n",
     "    Parameters\n",
@@ -365,7 +365,7 @@
     "    node_representation : string\n",
     "        Set to \"state if state nodes associated with the same physical\n",
     "        node should have different reference names. Defaults to \"physical\".\n",
-    "    *args : pandas df formatted layers\n",
+    "    layers : pandas df formatted layers\n",
     "        \n",
     "    Returns\n",
     "    -------\n",
@@ -380,20 +380,13 @@
     "    \n",
     "    # Pool all nodes and sort the set\n",
     "    nodes_hash = []\n",
-    "    for l, df in enumerate(args):\n",
+    "    for l, df in enumerate(layers):\n",
     "        layer_nodes = set()\n",
     "        layer_nodes.update(df[\"user1\"])\n",
-    "        layer_nodes.update(df[\"user2\"])\n",
-    "\n",
-    "        if node_representation == \"state\":\n",
-    "            # Add layer identifier to end of each node hash\n",
-    "            layer_nodes = [hash_str+\"_\"+str(l+1) for hash_str in layer_nodes]    \n",
+    "        layer_nodes.update(df[\"user2\"]) \n",
     "        nodes_hash.extend(layer_nodes) # no good reason to sort them\n",
     "        \n",
-    "    if node_representation == \"physical\":\n",
-    "        nodes_hash = sorted(set(nodes_hash)) # no good reason not to sort them\n",
-    "    \n",
-    "    nodes = nodes_hash\n",
+    "    nodes = set(nodes_hash) # no good reason not to sort them\n",
     "    \n",
     "    # Add vertices\n",
     "    out_file = \"*Vertices %d\" % len(nodes)\n",
@@ -404,65 +397,51 @@
     "        hashid = str(n)\n",
     "        out_file += '\\n%d \"Node %s\" 1.0' % (intid,hashid)\n",
     "        hashid_to_intid[hashid] = intid\n",
-    "        \n",
-    "    # Add edges header to file\n",
-    "    out_file += \"\\n*Multiplex\"\n",
+    "\n",
+    "    #############################\n",
+    "    ## Add Intra-edges to file ##\n",
+    "    #############################\n",
     "    \n",
-    "    for l, df in enumerate(args):\n",
-    "        if node_representation == \"state\":\n",
-    "            user1 = [hash_str+\"_\"+str(l+1) for hash_str in df[\"user1\"]]\n",
-    "            user2 = [hash_str+\"_\"+str(l+1) for hash_str in df[\"user2\"]]\n",
-    "        else:\n",
-    "            user1 = df[\"user1\"]\n",
-    "            user2 = df[\"user2\"]\n",
+    "    out_file += \"\\n*Multiplex\\n# Intra edges: layer node layer node weight\"\n",
+    "    \n",
+    "    for l, df in enumerate(layers):\n",
+    "        user1 = df[\"user1\"]\n",
+    "        user2 = df[\"user2\"]\n",
     "            \n",
-    "        edges_hash = zip(user1, user2)\n",
+    "        edges = zip(user1, user2)\n",
     "        \n",
-    "        # Add weights. THIS IS REDUNDANT FOR 5MINS TIMESLICES BECAUSE PPL ONLY MEET ONCE HERE.\n",
-    "        edges = [(e[0],e[1],w) for e,w in Counter(edges_hash).items()]\n",
+    "        # Add weights. REDUNDANT FOR 5MINS TIMESLICES BECAUSE PPL ONLY MEET ONCE HERE.\n",
+    "        edges = [(e[0],e[1],w) for e,w in Counter(edges).items()]\n",
     "        \n",
-    "        # Add edges to file\n",
+    "        # Add Intra-edges to file\n",
     "        for i,j,w in edges:\n",
-    "            out_file += '\\n%d %s %d %s %d' % (l+1,hashid_to_intid[i],l+1,hashid_to_intid[j],w) #+1 because 1 is first layer index\n",
+    "            out_file += '\\n%d %s %d %s %d' % (l+1,hashid_to_intid[i], l+1,hashid_to_intid[j],w) #+1 because 1 is first layer index\n",
     "            \n",
-    "    # Add interlayer relax-rates - if halflife is not infinte (represented as -1)\n",
+    "    \n",
+    "    #############################\n",
+    "    ## Add Inter-edges to file ##\n",
+    "    #############################\n",
+    "    \n",
+    "    out_file += \"# Intra edges: layer node layer node weight\"\n",
+    "    \n",
+    "    # Infinte halflife (represented as -1)\n",
     "    if halflife == -1:\n",
     "        return out_file\n",
+    "    \n",
     "    \n",
     "    # Relax decay function\n",
     "    def N(t):\n",
     "        tau = halflife/np.log(2)\n",
     "        return np.exp(-t/float(tau))\n",
     "    \n",
-    "    # Add inter-statenode relax rates\n",
-    "    if node_representation == \"state\":\n",
-    "        nodes_hash_set = set([hash_str_id.split(\"_\")[0] for hash_str_id in nodes_hash])\n",
-    "        error_count = 0\n",
-    "        for n in nodes_hash_set:\n",
-    "            for l1, df1 in enumerate(args):\n",
-    "                for l2, df2 in enumerate(args):\n",
-    "                    if not l2 > l1:\n",
-    "                        continue\n",
     "                        \n",
-    "                    in_both_layers = set(list(df1['user1'].values)+list(df1['user2'].values)) & set(list(df2['user1'].values)+list(df2['user2'].values))\n",
-    "                    if n not in in_both_layers:\n",
-    "                        continue\n",
-    "                        \n",
-    "                    n1 = n+\"_\"+str(l1+1)\n",
-    "                    n2 = n+\"_\"+str(l2+1)\n",
-    "                    \n",
-    "                    time_diff = df2['timestamp'].values[0] - df1['timestamp'].values[0]\n",
-    "                    out_file += '\\n%d %s %d %s %f' % (l1+1,hashid_to_intid[n1],l2+1,hashid_to_intid[n2],N(time_diff))\n",
-    "                    \n",
-    "                        \n",
-    "    elif node_representation == \"physical\":\n",
-    "        for n in nodes:\n",
-    "            for l1, df1 in enumerate(args):\n",
-    "                for l2, df2 in enumerate(args):\n",
-    "                    if not l2 > l1:\n",
-    "                        continue\n",
-    "                    time_diff = df2['timestamp'].values[0] - df1['timestamp'].values[0]\n",
-    "                    out_file += '\\n%d %s %d %s %f' % (l1+1,hashid_to_intid[n],l2+1,hashid_to_intid[n],N(time_diff))\n",
+    "    for n in nodes:\n",
+    "        for l1, df1 in enumerate(layers):\n",
+    "            for l2, df2 in enumerate(layers):\n",
+    "                if not l2 > l1:\n",
+    "                    continue\n",
+    "                time_diff = df2['timestamp'].values[0] - df1['timestamp'].values[0]\n",
+    "                out_file += '\\n%d %s %d %s %f' % (l1+1,hashid_to_intid[n],l2+1,hashid_to_intid[n],N(time_diff))\n",
     "    \n",
     "    \n",
     "    return out_file"
@@ -470,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1595,
+   "execution_count": 1633,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -486,19 +465,96 @@
     }
    ],
    "source": [
-    "tmp1 = network_reformat_multiplex(3600,\"physical\",*layers[:10])"
+    "tmp1 = network_reformat_multiplex(layers[:10], halflife=3600)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1597,
+   "execution_count": 1634,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "with open(\"input/multiplex-network-hash.net\", 'w') as outfile:\n",
+    "with open(\"input/multiplex-network1.net\", 'w') as outfile:\n",
     "    outfile.write(tmp1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1625,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 1625,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(list(layers[1]['user1'].values)+list(layers[1]['user2'].values)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1621,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'3782b301e15c952cbc19c1c98bee8a': 7, '4ca7e7159c3873305be35f07cfe438': 6, '7a3236d1e82edfb253a0e4060ff64e': 6, 'd5f7d3e1e9544ad5f0e0b5797bcd26': 6, '7b97a29e7203dc5f32aa8821da2e74': 5, '01eac40da88f4124f77c4bef560296': 4, '995a155356ba09745a5fcc786d03a9': 4, '648a348c89de1523ebcdcb47e7eaf1': 4, '533c43f05f863b68dc308280b82820': 4, 'f34c9ceb22c7f36b3f543f927ead62': 3, '88b06b07af9a8c43e3048003324a6c': 2, '7942ad3b074c140ea3a3f87e60af0e': 2, 'cb969ab50a684a4dfe7452013a3d58': 2, '15f2df470e3660b75fc76925e70232': 2, 'c130d6d1bbb6d17e7089147b62ee52': 2, '75e3669e556859f5610a985431264a': 2, '29d07c9c3db687d13720b5041d5139': 2, '673fb69d85e592ba4cbc1349cd998f': 2, 'b7b98e1489e735d8ce4d30348efcc9': 2, '8e6520edaed652e5f7944e1758fc03': 2, '85ae772e4de64975d62be4ba1b41e8': 1, '01e5981deb68fca20a5df8afbb10c6': 1, 'e2b531dd96b79f69ee8399932b5a08': 1, '1312d7f4ed5089cb37d85c47288231': 1, '946df17c3d8629f1a4212983afdca7': 1, 'a5a21108856c86bbee025c40bdf05a': 1, '08862c9bfd746af55266a0dab423a3': 1, '465b4fc9166ea6ca592d9f80a6fc9c': 1, '39f8e26908212e0bd80b8e7a2014e1': 1, 'c4d85dcf180ac803749f03c68c941e': 1, '757b0530d13b3de4916324199ded90': 1, 'e7659834f15dd1cd2f7d1774f40156': 1, '51bbc59b59c49e7af848d5172ede97': 1, 'a86f60d62eaad69ef35e36650fc10b': 1, '1074f7c8efee6dc8bbc5ec7ad89442': 1, '52abc212c35d14baad756836df8637': 1, '79f367d85c945bad06d5f5875a2014': 1, '12ec66058d1902e7b7ec6ab28cf856': 1, 'b50780f9f5082c4ae183912e63a0af': 1, '9521d0db4ccaa684c0faddb8bcb60d': 1, '658289f8dc454ef88136ba29558854': 1, 'cb251815267e679451596915e56dd1': 1, '431dc968fe058912881be32802f819': 1})"
+      ]
+     },
+     "execution_count": 1621,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter(list(layers[1]['user1'].values) + list(layers[1]['user2'].values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1622,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = [\"e393ffb658343d8ded19dbc2a0569d\", \"85ae772e4de64975d62be4ba1b41e8\", \"01e5981deb68fca20a5df8afbb10c6\", \"88b06b07af9a8c43e3048003324a6c\", \"29d07c9c3db687d13720b5041d5139\", \"cb969ab50a684a4dfe7452013a3d58\", \"c7226831c5abb074d6346b9fe93e8b\", \"e2b531dd96b79f69ee8399932b5a08\", \"3ccd1cf7d78652fbfed174be249a1c\", \"096ca3311db697f8649ffe05fe4aeb\", \"15f2df470e3660b75fc76925e70232\", \"01eac40da88f4124f77c4bef560296\", \"c130d6d1bbb6d17e7089147b62ee52\", \"e4018ed430254ab90243ae43c55ba4\", \"1312d7f4ed5089cb37d85c47288231\", \"189b5ff48a2a5ddd241f9587423918\", \"4ca7e7159c3873305be35f07cfe438\", \"3782b301e15c952cbc19c1c98bee8a\", \"a5a21108856c86bbee025c40bdf05a\", \"995a155356ba09745a5fcc786d03a9\", \"75e3669e556859f5610a985431264a\", \"8216b2c7553c9c95b1f7a2c0eaea87\", \"08862c9bfd746af55266a0dab423a3\", \"465b4fc9166ea6ca592d9f80a6fc9c\", \"946df17c3d8629f1a4212983afdca7\", \"648a348c89de1523ebcdcb47e7eaf1\", \"8b32905dca5af2cb0f45055108a274\", \"39f8e26908212e0bd80b8e7a2014e1\", \"c4d85dcf180ac803749f03c68c941e\", \"79d9e8a91191a7acde373095ea0ddd\", \"757b0530d13b3de4916324199ded90\", \"d8803c5ef98fc2a4e6cc7e7ce40c8f\", \"02316efb6bd3b6b4e0c66c76e6670e\", \"7a3236d1e82edfb253a0e4060ff64e\", \"e7659834f15dd1cd2f7d1774f40156\", \"f46397f4521372d2436408694a60ca\", \"91934700597f85fb6317c9dbf7d891\", \"51bbc59b59c49e7af848d5172ede97\", \"d5f7d3e1e9544ad5f0e0b5797bcd26\", \"a86f60d62eaad69ef35e36650fc10b\", \"7d2a3e1fc0e15fdb40c8dde5c35ebd\", \"1074f7c8efee6dc8bbc5ec7ad89442\", \"52abc212c35d14baad756836df8637\", \"79f367d85c945bad06d5f5875a2014\", \"7942ad3b074c140ea3a3f87e60af0e\", \"673fb69d85e592ba4cbc1349cd998f\", \"54952538d25f9855948aa42aa26d9f\", \"cea3bd41667668bab0d93d44aefb99\", \"b7b98e1489e735d8ce4d30348efcc9\", \"12ec66058d1902e7b7ec6ab28cf856\", \"b50780f9f5082c4ae183912e63a0af\", \"9521d0db4ccaa684c0faddb8bcb60d\", \"42774ab3885240e894a8b41088f20b\", \"533c43f05f863b68dc308280b82820\", \"658289f8dc454ef88136ba29558854\", \"f34c9ceb22c7f36b3f543f927ead62\", \"cb251815267e679451596915e56dd1\", \"0037c93a19a7e90580086b462ba11b\", \"431dc968fe058912881be32802f819\", \"7b97a29e7203dc5f32aa8821da2e74\", \"cc1cf9714ccd17bdeaf374cad42e26\", \"8e6520edaed652e5f7944e1758fc03\", \"30383e7d47ff768d56639c31ac2664\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1624,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63"
+      ]
+     },
+     "execution_count": 1624,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(a)"
    ]
   },
   {
@@ -569,7 +625,7 @@
    },
    "outputs": [],
    "source": [
-    "def community_detection_multiplex(halflife=-1, node_representation=\"physical\", *args):\n",
+    "def community_detection_multiplex(halflife=-1, node_representation=\"physical\", layers):\n",
     "    \"\"\"Run multiplex community detection because Python implementation has no docs\n",
     "    \n",
     "    Parameters\n",
@@ -580,7 +636,7 @@
     "    node_representation : string\n",
     "        Set to \"state if state nodes associated with the same physical\n",
     "        node should have different reference names. Defaults to \"physical\".\n",
-    "    *args : layers (pandas dfs)\n",
+    "    layers : layers (pandas dfs)\n",
     "    \n",
     "    Returns\n",
     "    -------\n",
@@ -624,7 +680,7 @@
     "        return module_flow, exit_flow\n",
     "    \n",
     "    # Get network in mutliplex string format and define filename\n",
-    "    multiplex_network, int_to_hash = network_reformat_multiplex(halflife, node_representation, *args)\n",
+    "    multiplex_network, int_to_hash = network_reformat_multiplex(halflife, node_representation, layers)\n",
     "    multiplex_network_filename = 'multiplex-network'\n",
     "\n",
     "    # Store locally\n",
