--- a/legacy_code.ipynb
+++ b/legacy_code.ipynb
@@ -116,7 +116,118 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "def network_reformat_multiplex(halflife=-1,node_representation=\"physical\",*args):\n",
+    "    \"\"\"Return multiplex representation of multiplex network\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    halflife : number\n",
+    "        Halflife in seconds of relax-rate decay between layers.\n",
+    "        Defaults to -1.\n",
+    "    node_representation : string\n",
+    "        Set to \"state if state nodes associated with the same physical\n",
+    "        node should have different reference names. Defaults to \"physical\".\n",
+    "    *args : pandas df formatted layers\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    net_file : string\n",
+    "        A network string in multiplex format\n",
+    "    int_to_hash : dict\n",
+    "        Key-value pairs of node integer id and original hash id\n",
+    "    \"\"\"\n",
+    "    print \"-> network_reformat_multiplex\\n\\t\",\n",
+    "    \n",
+    "    # Infomap will only work with node indices on the command line.\n",
+    "    \n",
+    "    # Pool all nodes and sort the set\n",
+    "    nodes_hash = []\n",
+    "    for l, df in enumerate(args):\n",
+    "        layer_nodes = set()\n",
+    "        layer_nodes.update(df[\"user1\"])\n",
+    "        layer_nodes.update(df[\"user2\"])\n",
+    "\n",
+    "        if node_representation == \"state\":\n",
+    "            # Add layer identifier to end of each node hash\n",
+    "            layer_nodes = [hash_str+\"_\"+str(l+1) for hash_str in layer_nodes]    \n",
+    "        nodes_hash.extend(layer_nodes) # no good reason to sort them\n",
+    "        \n",
+    "    if node_representation == \"physical\":\n",
+    "        nodes_hash = sorted(set(nodes_hash)) # no good reason not to sort them\n",
+    "    \n",
+    "    nodes = nodes_hash\n",
+    "    \n",
+    "    # Add vertices\n",
+    "    out_file = \"*Vertices %d\" % len(nodes)\n",
+    "    \n",
+    "    hashid_to_intid = {}\n",
+    "    for i,n in enumerate(nodes):\n",
+    "        intid = i+1\n",
+    "        hashid = str(n)\n",
+    "        out_file += '\\n%d \"Node %s\" 1.0' % (intid,hashid)\n",
+    "        hashid_to_intid[hashid] = intid\n",
+    "        \n",
+    "    # Add edges header to file\n",
+    "    out_file += \"\\n*Multiplex\"\n",
+    "    \n",
+    "    for l, df in enumerate(args):\n",
+    "        if node_representation == \"state\":\n",
+    "            user1 = [hash_str+\"_\"+str(l+1) for hash_str in df[\"user1\"]]\n",
+    "            user2 = [hash_str+\"_\"+str(l+1) for hash_str in df[\"user2\"]]\n",
+    "        else:\n",
+    "            user1 = df[\"user1\"]\n",
+    "            user2 = df[\"user2\"]\n",
+    "            \n",
+    "        edges_hash = zip(user1, user2)\n",
+    "        \n",
+    "        # Add weights. THIS IS REDUNDANT FOR 5MINS TIMESLICES BECAUSE PPL ONLY MEET ONCE HERE.\n",
+    "        edges = [(e[0],e[1],w) for e,w in Counter(edges_hash).items()]\n",
+    "        \n",
+    "        # Add edges to file\n",
+    "        for i,j,w in edges:\n",
+    "            out_file += '\\n%d %s %d %s %d' % (l+1,hashid_to_intid[i],l+1,hashid_to_intid[j],w) #+1 because 1 is first layer index\n",
+    "            \n",
+    "    # Add interlayer relax-rates - if halflife is not infinte (represented as -1)\n",
+    "    if halflife == -1:\n",
+    "        return out_file\n",
+    "    \n",
+    "    # Relax decay function\n",
+    "    def N(t):\n",
+    "        tau = halflife/np.log(2)\n",
+    "        return np.exp(-t/float(tau))\n",
+    "    \n",
+    "    # Add inter-statenode relax rates\n",
+    "    if node_representation == \"state\":\n",
+    "        nodes_hash_set = set([hash_str_id.split(\"_\")[0] for hash_str_id in nodes_hash])\n",
+    "        error_count = 0\n",
+    "        for n in nodes_hash_set:\n",
+    "            for l1, df1 in enumerate(args):\n",
+    "                for l2, df2 in enumerate(args):\n",
+    "                    if not l2 > l1:\n",
+    "                        continue\n",
+    "                        \n",
+    "                    in_both_layers = set(list(df1['user1'].values)+list(df1['user2'].values)) & set(list(df2['user1'].values)+list(df2['user2'].values))\n",
+    "                    if n not in in_both_layers:\n",
+    "                        continue\n",
+    "                        \n",
+    "                    n1 = n+\"_\"+str(l1+1)\n",
+    "                    n2 = n+\"_\"+str(l2+1)\n",
+    "                    \n",
+    "                    time_diff = df2['timestamp'].values[0] - df1['timestamp'].values[0]\n",
+    "                    out_file += '\\n%d %s %d %s %f' % (l1+1,hashid_to_intid[n1],l2+1,hashid_to_intid[n2],N(time_diff))\n",
+    "                    \n",
+    "                        \n",
+    "    elif node_representation == \"physical\":\n",
+    "        for n in nodes:\n",
+    "            for l1, df1 in enumerate(args):\n",
+    "                for l2, df2 in enumerate(args):\n",
+    "                    if not l2 > l1:\n",
+    "                        continue\n",
+    "                    time_diff = df2['timestamp'].values[0] - df1['timestamp'].values[0]\n",
+    "                    out_file += '\\n%d %s %d %s %f' % (l1+1,hashid_to_intid[n],l2+1,hashid_to_intid[n],N(time_diff))\n",
+    "    \n",
+    "    \n",
+    "    return out_file"
    ]
   },
   {
