added visualisation and pipeline for processing data for d3

--- a/legacy_code.ipynb
+++ b/legacy_code.ipynb
@@ -250,7 +250,66 @@
     }
    ],
    "source": [
-    "from graphtool import *"
+    "# Search in rows, select columns, add column, delete column.\n",
+    "    i = 0\n",
+    "    while True:\n",
+    "        \n",
+    "        if len(sorted_communities) >= len(communities):\n",
+    "            print np.sum(X)\n",
+    "            break\n",
+    "            \n",
+    "        similarity = 0\n",
+    "        link_end = 0\n",
+    "        host_link = 0\n",
+    "        guest_link = 0\n",
+    "        \n",
+    "        left_end = 0\n",
+    "        right_end = -1\n",
+    "        \n",
+    "        while similarity == 0:\n",
+    "            if i > 1000:\n",
+    "                print \"infinte loop\"\n",
+    "                break\n",
+    "            if left_end >= len(sorted_communities) / 2.0:\n",
+    "                print \"--> start from new max\"\n",
+    "                abs_index = np.argmax(X)\n",
+    "                index0 = abs_index / N;\n",
+    "                index1 = abs_index % N;\n",
+    "                X[:,index0] = 0; X[:,index1] = 0\n",
+    "                sorted_communities += [index0,index1]\n",
+    "                if abs_index == 0: break\n",
+    "                \n",
+    "                print sorted_communities\n",
+    "                \n",
+    "            for end in [left_end, right_end]:\n",
+    "                c_index = sorted_communities[end]\n",
+    "                max_value, max_index = np.max(X[c_index,:]), np.argmax(X[c_index,:])\n",
+    "                if max_value > similarity:\n",
+    "                    similarity = max_value\n",
+    "                    link_end = end\n",
+    "                    host_link = c_index\n",
+    "                    guest_link = max_index\n",
+    "                    \n",
+    "            left_end += 1\n",
+    "            right_end -= 1\n",
+    "            i += 1\n",
+    "            \n",
+    "        if guest_link == 0: \n",
+    "            print \"breaking\"\n",
+    "            break\n",
+    "        \n",
+    "        print \"\\tsimilarity\", similarity\n",
+    "        print \"\\tlink_end\", link_end\n",
+    "        print \"\\thost_link\", host_link\n",
+    "        print \"\\tguest_link\", guest_link\n",
+    "        \n",
+    "        if link_end >= 0:  sorted_communities.insert(0,guest_link)\n",
+    "        if link_end < 0: sorted_communities.append(guest_link)\n",
+    "            \n",
+    "        print sorted_communities\n",
+    "            \n",
+    "        # Set chosen link to 0, so it won't be chosen in later iterations\n",
+    "        X[:,guest_link] = 0"
    ]
   },
   {
