--- a/process_for_d3.ipynb
+++ b/process_for_d3.ipynb
@@ -771,7 +771,7 @@
    },
    "outputs": [],
    "source": [
-    "with open('../Visualisation/data/dataset2.json', 'w') as outfile:\n",
+    "with open('Visualisation/data/dataset2.json', 'w') as outfile:\n",
     "    json.dump(ds,outfile)"
    ]
   },
